kubernetes/db-posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db-posts
  name: db-posts
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-posts
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/grpc-server-app-network: "true"
        io.kompose.service: db-posts
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: db_posts
            - name: MYSQL_PASSWORD
              value: root
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: root
          image: mariadb:10.5.8
          name: db-posts
          ports:
            - containerPort: 3307
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db-posts-claim0
      restartPolicy: Always
      volumes:
        - name: db-posts-claim0
          persistentVolumeClaim:
            claimName: db-posts-claim0
status: {}
