kubernetes/db-posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db-posts
  name: db-posts
spec:
  ports:
    - name: "3307"
      port: 3307
      targetPort: 3307
  selector:
    io.kompose.service: db-posts
status:
  loadBalancer: {}
